<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/desc"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:text="@string/choose_player_msg"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/yes"
            android:layout_below="@+id/desc"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:id="@+id/positive_button"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/no_dialog"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_below="@+id/desc"
            android:id="@+id/negative_button"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/white"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
